--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
         "@babel/runtime": "7.14.0",
         "@material-ui/core": "4.12.1",
         "@material-ui/icons": "4.11.2",
+        "@tensorflow-models/mobilenet": "2.1.0",
+        "@tensorflow/tfjs": "3.8.0",
+        "@tensorflow/tfjs-backend-webgl": "3.8.0",
+        "@tensorflow/tfjs-converter": "3.8.0",
+        "@tensorflow/tfjs-core": "3.8.0",
         "@testing-library/react": "11.2.7",
         "@types/babel__generator": "*",
         "@types/jest": "26.0.23",
@@ -107,6 +112,7 @@
         "@babel/runtime-corejs3": "7.14.0",
         "@hot-loader/react-dom": "17.0.1",
         "axios": "0.21.1",
+        "classnames": "2.3.1",
         "express": "4.17.1",
         "react": "17.0.1",
         "react-dom": "17.0.1",
