--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "@tensorflow/tfjs-converter": "3.8.0",
         "@tensorflow/tfjs-core": "3.8.0",
         "@testing-library/react": "11.2.7",
+        "@testing-library/react-hooks": "7.0.1",
         "@types/babel__generator": "*",
         "@types/jest": "26.0.23",
         "@types/react": "17.0.1",
