--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
     "description": "Dog-finder",
     "main": "index.js",
     "scripts": {
-        "prepare": "husky install && husky add .husky/pre-commit 'npx lint-staged'",
-        "heroku-prebuild": "npm install --dev && npm run build:client-prod",
+        "prepare": "npm install husky && npx husky install && npx husky add .husky/pre-commit 'npx lint-staged'",
+        "heroku-prebuild": "npm set-script prepare '' && npm install --dev && npm run build:client-prod",
         "lint:eslint": "eslint -c .eslintrc.json",
         "lint:types": "tsc -p tsconfig.json --pretty --noEmit --noEmitOnError",
         "lint:css": "stylelint",
         "full-lint": "npm run lint:eslint && npm run lint:css && npm run lint:types",
         "prettier": "prettier --write './**/*{js,ts,tsx,json}'",
-        "test": "jest",
+        "test:unit": "jest",
+        "test:e2e": "JEST_PUPPETEER_CONFIG=./jest-puppeteer.config.js jest --runInBand --detectOpenHandles --config=./client/e2e/jest.config.js",
         "test:related": "jest --findRelatedTests",
         "coverage": "jest --coverage",
         "build:client-dev": "NODE_ENV=development webpack --config ./configs/webpack/client/webpack.dev.js --mode development --color",
@@ -35,6 +36,10 @@
         "url": "https://github.com/AntonLantukh/dog-finder/issues"
     },
     "homepage": "https://github.com/AntonLantukh/dog-finder#readme",
+    "engines": {
+        "node": "16.5.0",
+        "npm": "7.19.1"
+    },
     "devDependencies": {
         "@babel/core": "7.14.3",
         "@babel/plugin-proposal-class-properties": "7.13.0",
@@ -56,6 +61,8 @@
         "@testing-library/react-hooks": "7.0.1",
         "@types/babel__generator": "*",
         "@types/jest": "26.0.23",
+        "@types/jest-environment-puppeteer": "4.4.1",
+        "@types/puppeteer": "5.4.4",
         "@types/react": "17.0.1",
         "@types/react-dom": "17.0.1",
         "@types/react-router": "5.1.14",
@@ -87,11 +94,13 @@
         "html-webpack-plugin": "5.3.1",
         "husky": "6.0.0",
         "jest": "27.0.4",
+        "jest-puppeteer": "5.0.4",
         "lint-staged": "11.0.0",
         "mini-css-extract-plugin": "1.6.0",
         "postcss-loader": "5.3.0",
         "prettier": "2.3.0",
         "prettier-stylelint": "0.4.2",
+        "puppeteer": "9.1.1",
         "react-bootstrap": "1.6.1",
         "sass": "1.34.1",
         "sass-loader": "12.0.0",
